corrected overflow in the card

--- a/css/index.css
+++ b/css/index.css
@@ -58,6 +58,9 @@
   color: black;
   transition: 0.5s;
 }
+.row .mb-4 .card{
+  overflow-y: hidden;
+}
 p {
   font-size: 20px !important;
 }
